[gd_scene load_steps=48 format=2]

[ext_resource path="res://src/Effects/Textures/smoke.png" type="Texture" id=1]
[ext_resource path="res://src/Effects/Materials/BossExplosion.tres" type="Material" id=2]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/GravityBurrow.gd" type="Script" id=3]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=4]
[ext_resource path="res://src/Sounds/HIT_BOSS.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/GravitySummon.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/antonion.res" type="SpriteFrames" id=7]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/GravityThrow.gd" type="Script" id=8]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/BouncingProjectile.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/GravityHurl.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/GravityBoxSpawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/GravityIntro.gd" type="Script" id=12]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/GravityProjectile.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/GravityCrash.gd" type="Script" id=14]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/DesperationAttack.gd" type="Script" id=15]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=16]
[ext_resource path="res://src/Sounds/Antionion - GravityCrash.wav" type="AudioStream" id=17]
[ext_resource path="res://src/Sounds/Antonion - BoxPrepare.wav" type="AudioStream" id=18]
[ext_resource path="res://src/Sounds/Antonion - Desperation.wav" type="AudioStream" id=19]
[ext_resource path="res://src/Sounds/Antonion - Jump.wav" type="AudioStream" id=20]
[ext_resource path="res://src/Actors/Bosses/BossStun.gd" type="Script" id=21]
[ext_resource path="res://src/Sounds/Antonion - Burrow.ogg" type="AudioStream" id=22]
[ext_resource path="res://src/Actors/Bosses/BossAI.gd" type="Script" id=23]
[ext_resource path="res://src/Sounds/Antionion - Throw.wav" type="AudioStream" id=24]
[ext_resource path="res://src/Sounds/Bike - Land.wav" type="AudioStream" id=25]
[ext_resource path="res://src/Actors/Modules/Enemy/BossDamage.gd" type="Script" id=26]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/dps_hud.gd" type="Script" id=27]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=28]
[ext_resource path="res://src/DialogSystem/Dialogs/Stages/Antonion_Dialogue.tres" type="Resource" id=29]
[ext_resource path="res://src/Actors/Bosses/GigaboltManowar/Space.gd" type="Script" id=30]
[ext_resource path="res://src/Actors/Panda.gd" type="Script" id=31]
[ext_resource path="res://src/AchievementSystem/BossAchievementHandler.gd" type="Script" id=32]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/Idle.gd" type="Script" id=33]
[ext_resource path="res://src/AchievementSystem/Achievements/ANTONIONBUSTERONLY.tres" type="Resource" id=34]
[ext_resource path="res://src/AchievementSystem/Achievements/ANTONIONNAKED.tres" type="Resource" id=35]
[ext_resource path="res://src/AchievementSystem/Achievements/ANTONIONNODAMAGE.tres" type="Resource" id=36]
[ext_resource path="res://src/Actors/Enemies/Shared/LongBossDeath.tscn" type="PackedScene" id=37]
[ext_resource path="res://src/Effects/Materials/BossSmokeParticlesMedium.tres" type="Material" id=38]

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 14, 16.5 )

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 13, 19 )

[sub_resource type="CanvasItemMaterial" id=100]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=106]
lifetime_randomness = 0.51
emission_shape = 2
emission_box_extents = Vector3( 0, 0, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 79.81
gravity = Vector3( 0, 400, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.65
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 250.0
anim_speed = 2.0
anim_speed_random = 0.58
anim_offset_random = 1.0

[sub_resource type="ParticlesMaterial" id=104]
emission_shape = 2
emission_box_extents = Vector3( 16, 0, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 25.0
gravity = Vector3( 0, 400, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.33
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 2.0
anim_speed_random = 0.58
anim_offset_random = 1.0

[sub_resource type="ParticlesMaterial" id=105]
emission_shape = 2
emission_box_extents = Vector3( 16, 0, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 25.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.33
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 2.0
anim_speed_random = 0.58
anim_offset_random = 1.0

[sub_resource type="Curve" id=102]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=62]
curve = SubResource( 102 )

[sub_resource type="ParticlesMaterial" id=103]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 62 )

[node name="Antonion" type="KinematicBody2D" groups=["Bosses"]]
z_index = 5
collision_layer = 0
script = ExtResource( 31 )
max_health = 160.0

[node name="Space" type="Node" parent="."]
script = ExtResource( 30 )
wall_check = 1
border_distance = 64
low_height_segments = 3

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 23 )
time_between_attacks = Vector2( 0.25, 0.85 )
desperation_chance = 0.0

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 49 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 4 )
z_index = 1
frames = ExtResource( 7 )
animation = "jump"
playing = true
offset = Vector2( 0, -8 )
flip_h = true

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, 2 )
shape = SubResource( 50 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.5, 3.5 )
scale = Vector2( 4.35, 4.25 )

[node name="Intro" type="Node2D" parent="."]
script = ExtResource( 12 )
actions = [ "Event" ]
dialogue = ExtResource( 29 )
projectile = ExtResource( 11 )

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 33 )
conflicting_moves = [ "Anything" ]
animation = "idle"

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 26 )
invulnerability_time = 0.1
max_flash_time = 0.35
weakenesses = [ "DarkArrow", "BlackArrow", "Rasetsusen" ]

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -3.0
max_distance = 600.0
bus = "SFX"

[node name="dps" type="RichTextLabel" parent="Damage"]
visible = false
margin_left = -18.0
margin_top = -69.0
margin_right = 59.0
margin_bottom = -52.0
text = "0.0"
script = ExtResource( 27 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 28 )
damage = 3.0

[node name="BossStun" type="Node2D" parent="."]
script = ExtResource( 21 )
conflicting_moves = [ "BossDeath" ]
actions = [ "Event" ]
animation = "death"
horizontal_velocity = 120.0
jump_velocity = 150.0

[node name="GravityThrow" type="Node2D" parent="."]
script = ExtResource( 8 )
projectile = ExtResource( 9 )

[node name="throw" type="AudioStreamPlayer2D" parent="GravityThrow"]
stream = ExtResource( 24 )
volume_db = 2.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 16 )

[node name="GravityBurrow" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="collision" type="Particles2D" parent="GravityBurrow"]
modulate = Color( 0.623529, 0.54902, 0.454902, 1 )
material = SubResource( 100 )
position = Vector2( 0, 20 )
z_index = 1
emitting = false
amount = 48
lifetime = 0.75
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 106 )
texture = ExtResource( 1 )

[node name="burrow" type="Particles2D" parent="GravityBurrow"]
modulate = Color( 0.623529, 0.54902, 0.454902, 1 )
material = SubResource( 100 )
position = Vector2( 0, 20 )
emitting = false
amount = 20
lifetime = 0.75
explosiveness = 0.15
local_coords = false
process_material = SubResource( 104 )
texture = ExtResource( 1 )

[node name="burrow2" type="Particles2D" parent="GravityBurrow"]
modulate = Color( 0.623529, 0.54902, 0.454902, 1 )
material = SubResource( 100 )
position = Vector2( 0, 20 )
z_index = 1
emitting = false
amount = 14
lifetime = 0.75
explosiveness = 0.15
local_coords = false
process_material = SubResource( 105 )
texture = ExtResource( 1 )

[node name="jump" type="AudioStreamPlayer2D" parent="GravityBurrow"]
stream = ExtResource( 20 )
volume_db = 1.0
pitch_scale = 0.79
max_distance = 600.0
bus = "SFX"
script = ExtResource( 16 )

[node name="burrow3" type="AudioStreamPlayer2D" parent="GravityBurrow"]
stream = ExtResource( 22 )
volume_db = 1.0
pitch_scale = 1.21
max_distance = 600.0
bus = "SFX"
script = ExtResource( 16 )

[node name="land" type="AudioStreamPlayer2D" parent="GravityBurrow"]
stream = ExtResource( 25 )
pitch_scale = 0.86
max_distance = 600.0
bus = "SFX"
script = ExtResource( 16 )

[node name="GravitySummon" type="Node2D" parent="."]
script = ExtResource( 6 )
projectile = ExtResource( 13 )

[node name="point" type="AudioStreamPlayer2D" parent="GravitySummon"]
stream = ExtResource( 18 )
pitch_scale = 2.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 16 )

[node name="GravityHurl" type="Node2D" parent="."]
script = ExtResource( 10 )
projectile = ExtResource( 11 )

[node name="createbox" type="AudioStreamPlayer2D" parent="GravityHurl"]
stream = ExtResource( 18 )
volume_db = -2.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 16 )

[node name="GravityCrash" type="Node2D" parent="."]
script = ExtResource( 14 )
desperation_attack = true

[node name="DesperationAttack" type="Node" parent="GravityCrash"]
script = ExtResource( 15 )
projectile = ExtResource( 11 )

[node name="desperate" type="AudioStreamPlayer2D" parent="GravityCrash"]
stream = ExtResource( 17 )
volume_db = 2.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 16 )

[node name="roar" type="AudioStreamPlayer2D" parent="GravityCrash"]
stream = ExtResource( 19 )
volume_db = -2.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 16 )

[node name="BossDeath" parent="." instance=ExtResource( 37 )]
position = Vector2( 0, 8 )
death_animation = "death"
collectible = "antonion_weapon"

[node name="Explosion Particles" parent="BossDeath" index="0"]
amount = 24
process_material = ExtResource( 2 )

[node name="Smoke Particles" parent="BossDeath" index="1"]
process_material = ExtResource( 38 )

[node name="Remains" parent="BossDeath" index="4"]
process_material = SubResource( 103 )

[node name="AchievementHandler" type="Node" parent="."]
script = ExtResource( 32 )
_desperation = NodePath("../GravityCrash")
no_damage = ExtResource( 36 )
buster_only = ExtResource( 34 )
naked = ExtResource( 35 )

[connection signal="dps" from="Damage" to="Damage/dps" method="_on_Damage_dps"]
[connection signal="ability_start" from="GravityCrash" to="BossStun" method="deactivate"]
[connection signal="ready_for_stun" from="GravityCrash" to="BossStun" method="reactivate"]
[connection signal="start_desperation" from="GravityCrash" to="GravityCrash/DesperationAttack" method="_on_start_desperation"]

[editable path="BossDeath"]
